Cambio tamano iconos

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="col-lg-4 col-md-6 d-noflex align-items-stretch">
           <a href="https://app.powerbi.com/view?r=eyJrIjoiMDhmZWMzZjAtY2VmZi00Njg1LThiNDQtZTgwZGRiMmNiMGE2IiwidCI6Ijk4MjAxZmVmLWQ5ZjYtNGU2OC04NGY1LWMyNzA1MDc0ZTM0MiIsImMiOjR9" target="_blank" style="text-decoration: none; color: inherit;">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file-find"></i></div>
+              <div class="icon"><i class="bx bx-search-alt"></i></div>
               <h4> Planes Específicos</h4>
               <p></p>
             </div>
@@ -61,7 +61,7 @@
         <div class="col-lg-4 col-md-6 d-noflex align-items-stretch">
           <a href="https://app.powerbi.com/view?r=eyJrIjoiNGZmNWI2OTMtYzM1Ny00ZGZkLTkwMTAtODFkZDNiNTA4YWUzIiwidCI6Ijk4MjAxZmVmLWQ5ZjYtNGU2OC04NGY1LWMyNzA1MDc0ZTM0MiIsImMiOjR9" target="_blank" style="text-decoration: none; color: inherit;">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-pie-chart-alt-2"></i></div>
+              <div class="icon"><i class="bx bx-bar-chart-alt"></i></div>
               <h4>Indicadores de Salud</h4>
               <p></p>
             </div>
